<resources>
    <string name="enterBp">! Enter your BP.</string>
    <string name="welcome">Welcome </string>
    <string name="name">Name:</string>
    <string name="birth">D.O.B:</string>
    <string name="clear">Delete All</string>
    <string name="btnLogBP">Log Blood Pressure</string>
    <string name="btnViewHistory">View History</string>
    <string name="btnViewAverage">View Weekly Average</string>
    <string name="app_name">BloodPressureApp</string>
    <string name="userLoginNameHint">Enter Your User Name</string>
    <string name="userPasswordHint">Enter Your Password</string>
    <string name="loginButtonTxt">Login</string>
    <string name="errMessageLogin">Your user is incorrect</string>
    <string name="errMessagePassword">Your password is incorrect</string>
    <string name="imageDescr">Blood Pressure Image</string>
    <string name="inputHintOne">Systolic</string>
    <string name="inputHintTwo">Diastolic</string>
    <string name="bpLabel">/</string>
    <string name="bpLogDisplay">Your blood pressure is </string>
    <string name="bpNormal">Your blood pressure is normal</string>
    <string name="bpElevated">Your blood pressure is elevated</string>
    <string name="bpStage1">You have stage 1 hypertension</string>
    <string name="bpStage2">You have stage 2 hypertension</string>
    <string name="bpCrisis">You are having a hypertensive crisis!</string>
    <string name="bpLow">Your blood pressure is low</string>
    <string name="invalid">The blood pressure you entered is invalid</string>
    <string name="historyTitle">Your Previous Logs</string>
    <string name="dateFormat">MM/dd/yyyy HH:mm:ss</string>
    <string name="sphygmomanometer">sphygmomanometer</string>
    <string name="homeButton">Home</string>
    <string name="newUserBtn">New User</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="userName">Choose a User Name</string>
    <string name="userPassword">Choose a Password</string>
    <string name="verifyPassword">Verify Your Password</string>
    <string name="submitBtn">Submit</string>
    <string name="pwMatchError">Your passwords do not match. Please try again</string>
</resources>
